[package]
name = "upgrade2webrtc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true }
webrtc = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
bitcode = { workspace = true }
hex = { workspace = true }
interprocess = { workspace = true, optional = true }
rcgen = "0.11"
tokio-rustls = "0.24"
rustls-pemfile = "1"
tokio-util = { version = "0.7", features = ["compat"], optional = true }
async-trait = { workspace = true }

[features]
local_sockets = ["interprocess", "tokio-util"]