[package]
name = "webrtc-tunnel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
toml = "0.8"
upgrade2webrtc = { path = "../upgrade2webrtc", features = ["local_sockets"]}
clap = { version = "4", features = ["derive"]}
anyhow = "1"

[features]
server = []