[package]
name = "webrtc-tunnel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
log = { workspace = true }
interprocess = { workspace = true }
toml = "0.8"
upgrade2webrtc = { path = "../upgrade2webrtc", features = ["local_sockets"]}
clap = { version = "4", features = ["derive"]}
anyhow = "1"
fern = "0.6"
humantime = "2"
fxhash = "0.2"

[features]
server = []

[profile.release]
lto = true