[package]
name = "webrtc-tunnel"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A tool to form peer-to-peer port forwarding over WebRTC"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
log = { workspace = true }
# interprocess = { workspace = true }
fxhash = { workspace = true }
toml = "0.8"
upgrade2webrtc = { version = "0", features = ["local_sockets"]}
clap = { version = "4", features = ["derive"]}
anyhow = "1"
fern = "0.6"
humantime = "2"

[features]
server = []

[profile.dev]
opt-level = 1
lto = "thin"

[profile.release]
lto = true